force-app/main/default/objects/WorkOrder/fields/IsForeperson__c.field-meta.xml
<CustomField>
    <fullName>IsForeperson__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used to indicate the foreperson required for the WO</description>
    <label>IsForeperson</label>
    <type>Checkbox</type>
</CustomField>