force-app/main/default/objects/WorkOrder/fields/IsJeopardy__c.field-meta.xml
<CustomField>
    <fullName>IsJeopardy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsJeopardy</label>
    <type>Checkbox</type>
</CustomField>