force-app/main/default/objects/WorkOrder/fields/IsOptimized__c.field-meta.xml
<CustomField>
    <fullName>IsOptimized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOptimized</label>
    <type>Checkbox</type>
</CustomField>