force-app/main/default/objects/WorkOrder/fields/IsPipeline__c.field-meta.xml
<CustomField>
    <fullName>IsPipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPipeline</label>
    <type>Checkbox</type>
</CustomField>