force-app/main/default/objects/WorkOrder/fields/IsPreInspect__c.field-meta.xml
<CustomField>
    <fullName>IsPreInspect__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsPreInspect</label>
    <type>Checkbox</type>
</CustomField>