force-app/main/default/objects/WorkOrder/fields/IsSLARequired__c.field-meta.xml
<CustomField>
    <fullName>IsSLARequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSLARequired</label>
    <type>Checkbox</type>
</CustomField>